--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -35,8 +35,8 @@ jobs:
 
       - name: 'Install StackSpot CLI'
         run: | 
-          curl -L -O https://stk.stackspot.com/installer/linux/stk.deb
-          sudo dpkg --install stk.deb
+          curl -L -O https://stk.stackspot.com/installer/linux/stk.deb | bash && exec $SHELL
+          #sudo dpkg --install stk.deb
           test -f ~/.stk/bin/.bash_profile && . ~/.stk/bin/.bash_profile
           stk -v
 
